tests/integration/pass/ranges_iteration.kr
# Test: Range iteration
# Expected: Pass

# Forward range
set r1 to range 1 to 5
for i in r1:
    print i

# Range with step
set r2 to range 0 to 10 by 2
for i in r2:
    print i

# Reverse range
set r3 to range 5 to 1 by -1
for i in r3:
    print i

