tests/integration/fail/modulo_by_zero.kr
# Test: Modulo by zero should error
# Expected: Fail with error

set x to 10 mod 0
print x

